Removed deprecated new URL(String) usage